[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Movement.gd" type="Script" id=2]
[ext_resource path="res://Player/HUD.gd" type="Script" id=3]
[ext_resource path="res://AttackMoves/AttackMove.gd" type="Script" id=4]
[ext_resource path="res://Player/CombatQueue.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]

[sub_resource type="Animation" id=2]
resource_name = "AttackAnimation"
length = 0.4
tracks/0/type = "transform"
tracks/0/path = NodePath("Model")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath("Model:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.70755e-06, 0, 0 ), Vector3( 0, 0, -21.516 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Model:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.70755e-06, 0, 0 ) ]
}

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="."]
script = ExtResource( 2 )

[node name="Model" type="CSGBox" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, -2.98024e-08, 0, 2.98024e-08, 1, 0, 3, 1.19209e-07 )
height = 6.0

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 1 )

[node name="Pivot" type="Position3D" parent="KinematicBody"]

[node name="Camera" type="Camera" parent="KinematicBody"]
transform = Transform( -4.34419e-08, 0.315086, -0.949063, 4.84668e-09, 0.949063, 0.315086, 1, 9.08812e-09, -4.27562e-08, -18.1519, 16.9464, -2.28854 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody"]
anims/AttackAnimation = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="MODE" type="Label" parent="HUD"]
margin_right = 42.0
margin_bottom = 23.0
rect_scale = Vector2( 4.52, 3.08 )
text = "Non-combat mode"

[node name="AttackMode" type="Control" parent="HUD"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="CombatQueue" type="Control" parent="HUD/AttackMode"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="HUD/AttackMode/CombatQueue"]
margin_left = 244.0
margin_top = 368.0
margin_right = 291.0
margin_bottom = 382.0
text = "Queue:"

[node name="QueuedMoves" type="GridContainer" parent="HUD/AttackMode/CombatQueue"]
margin_left = 242.0
margin_top = 400.0
margin_right = 602.0
margin_bottom = 440.0
columns = 10

[node name="Panel" type="Panel" parent="HUD/AttackMode"]
margin_left = 243.0
margin_top = 130.0
margin_right = 283.0
margin_bottom = 170.0
rect_scale = Vector2( 6.71826, 1.99767 )

[node name="Label" type="Label" parent="HUD/AttackMode"]
margin_left = 250.0
margin_top = 135.0
margin_right = 330.0
margin_bottom = 149.0
text = "Attack Menu"

[node name="AttackMenu" type="GridContainer" parent="HUD/AttackMode"]
margin_left = 261.0
margin_top = 159.0
margin_right = 499.0
margin_bottom = 198.0
hint_tooltip = "Punch"

[node name="Button" type="Button" parent="HUD/AttackMode/AttackMenu"]
margin_right = 21.0
margin_bottom = 20.0
text = "A"

[node name="Node" type="Node" parent="."]

[node name="PlayerCombatQueue" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Punch" type="Spatial" parent="PlayerCombatQueue"]
script = ExtResource( 4 )
attack_animation = "AttackAnimation"

[connection signal="pressed" from="HUD/AttackMode/AttackMenu/Button" to="HUD" method="_on_attack_pressed"]
